javat.output
Terminals unused in grammar

    DISALLOWED_INDENTIFIER
    DONE
    RBRACE


Rules useless in parser due to conflicts

    2 prob: var_def

    6 var_def: ε

   13 class_definition: ε

   32 mixed_expression: FLOAT

   38 expression: INT


State 0 conflicts: 6 shift/reduce, 2 reduce/reduce
State 8 conflicts: 6 shift/reduce, 3 reduce/reduce
State 17 conflicts: 6 reduce/reduce
State 18 conflicts: 6 reduce/reduce
State 52 conflicts: 4 shift/reduce
State 53 conflicts: 4 shift/reduce
State 54 conflicts: 4 shift/reduce
State 55 conflicts: 4 shift/reduce
State 56 conflicts: 4 shift/reduce
State 57 conflicts: 4 shift/reduce
State 58 conflicts: 4 shift/reduce
State 59 conflicts: 4 shift/reduce
State 61 conflicts: 4 shift/reduce
State 62 conflicts: 4 shift/reduce
State 63 conflicts: 4 shift/reduce
State 64 conflicts: 4 shift/reduce
State 65 conflicts: 4 shift/reduce
State 66 conflicts: 4 shift/reduce
State 67 conflicts: 4 shift/reduce
State 68 conflicts: 4 shift/reduce


Grammar

    0 $accept: prob $end

    1 prob: ε
    2     | var_def
    3     | var_def prob
    4     | class_definition
    5     | NEW

    6 var_def: ε
    7        | WORD EQUALS quoted_string SEMICOLON NEW
    8        | WORD EQUALS expression SEMICOLON NEW
    9        | WORD EQUALS mixed_expression SEMICOLON NEW
   10        | LETTER EQUALS quoted_string SEMICOLON NEW
   11        | LETTER EQUALS expression SEMICOLON NEW
   12        | LETTER EQUALS mixed_expression SEMICOLON NEW

   13 class_definition: ε
   14                 | PUBLIC CLASS WORD LBRACE
   15                 | PRIVATE CLASS WORD LBRACE
   16                 | CLASS WORD LBRACE

   17 mixed_expression: FLOAT
   18                 | mixed_expression ADD mixed_expression
   19                 | mixed_expression SUBT mixed_expression
   20                 | mixed_expression MULT mixed_expression
   21                 | mixed_expression DIV mixed_expression
   22                 | LPAR mixed_expression RPAR
   23                 | expression ADD mixed_expression
   24                 | expression SUBT mixed_expression
   25                 | expression MULT mixed_expression
   26                 | expression DIV mixed_expression
   27                 | mixed_expression ADD expression
   28                 | mixed_expression SUBT expression
   29                 | mixed_expression MULT expression
   30                 | mixed_expression DIV expression
   31                 | expression DIV expression
   32                 | FLOAT

   33 expression: INT
   34           | expression ADD expression
   35           | expression SUBT expression
   36           | expression MULT expression
   37           | LPAR expression RPAR
   38           | INT

   39 quoted_string: ε
   40              | QUOTE WORD QUOTE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INT <number> (258) 33 38
    FLOAT <floating> (259) 17 32
    WORD <string> (260) 7 8 9 14 15 16 40
    LETTER <string> (261) 10 11 12
    DISALLOWED_INDENTIFIER <string> (262)
    ADD (263) 18 23 27 34
    SUBT (264) 19 24 28 35
    MULT (265) 20 25 29 36
    DIV (266) 21 26 30 31
    LPAR (267) 22 37
    RPAR (268) 22 37
    SEMICOLON (269) 7 8 9 10 11 12
    DONE (270)
    EQUALS (271) 7 8 9 10 11 12
    PUBLIC (272) 14
    PRIVATE (273) 15
    CLASS (274) 14 15 16
    LBRACE (275) 14 15 16
    RBRACE (276)
    QUOTE (277) 40
    NEW (278) 5 7 8 9 10 11 12


Nonterminals, with rules where they appear

    $accept (24)
        on left: 0
    prob (25)
        on left: 1 2 3 4 5
        on right: 0 3
    var_def (26)
        on left: 6 7 8 9 10 11 12
        on right: 2 3
    class_definition (27)
        on left: 13 14 15 16
        on right: 4
    mixed_expression <floating> (28)
        on left: 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32
        on right: 9 12 18 19 20 21 22 23 24 25 26 27 28 29 30
    expression <number> (29)
        on left: 33 34 35 36 37 38
        on right: 8 11 23 24 25 26 27 28 29 30 31 34 35 36 37
    quoted_string (30)
        on left: 39 40
        on right: 7 10


State 0

    0 $accept: • prob $end

    WORD     shift, and go to state 1
    LETTER   shift, and go to state 2
    PUBLIC   shift, and go to state 3
    PRIVATE  shift, and go to state 4
    CLASS    shift, and go to state 5
    NEW      shift, and go to state 6

    $end      reduce using rule 1 (prob)
    $end      [reduce using rule 6 (var_def)]
    $end      [reduce using rule 13 (class_definition)]
    WORD      [reduce using rule 6 (var_def)]
    LETTER    [reduce using rule 6 (var_def)]
    PUBLIC    [reduce using rule 6 (var_def)]
    PRIVATE   [reduce using rule 6 (var_def)]
    CLASS     [reduce using rule 6 (var_def)]
    NEW       [reduce using rule 6 (var_def)]
    $default  reduce using rule 1 (prob)

    prob              go to state 7
    var_def           go to state 8
    class_definition  go to state 9


State 1

    7 var_def: WORD • EQUALS quoted_string SEMICOLON NEW
    8        | WORD • EQUALS expression SEMICOLON NEW
    9        | WORD • EQUALS mixed_expression SEMICOLON NEW

    EQUALS  shift, and go to state 10


State 2

   10 var_def: LETTER • EQUALS quoted_string SEMICOLON NEW
   11        | LETTER • EQUALS expression SEMICOLON NEW
   12        | LETTER • EQUALS mixed_expression SEMICOLON NEW

    EQUALS  shift, and go to state 11


State 3

   14 class_definition: PUBLIC • CLASS WORD LBRACE

    CLASS  shift, and go to state 12


State 4

   15 class_definition: PRIVATE • CLASS WORD LBRACE

    CLASS  shift, and go to state 13


State 5

   16 class_definition: CLASS • WORD LBRACE

    WORD  shift, and go to state 14


State 6

    5 prob: NEW •

    $default  reduce using rule 5 (prob)


State 7

    0 $accept: prob • $end

    $end  shift, and go to state 15


State 8

    2 prob: var_def •
    3     | var_def • prob

    WORD     shift, and go to state 1
    LETTER   shift, and go to state 2
    PUBLIC   shift, and go to state 3
    PRIVATE  shift, and go to state 4
    CLASS    shift, and go to state 5
    NEW      shift, and go to state 6

    $end      reduce using rule 1 (prob)
    $end      [reduce using rule 2 (prob)]
    $end      [reduce using rule 6 (var_def)]
    $end      [reduce using rule 13 (class_definition)]
    WORD      [reduce using rule 6 (var_def)]
    LETTER    [reduce using rule 6 (var_def)]
    PUBLIC    [reduce using rule 6 (var_def)]
    PRIVATE   [reduce using rule 6 (var_def)]
    CLASS     [reduce using rule 6 (var_def)]
    NEW       [reduce using rule 6 (var_def)]
    $default  reduce using rule 1 (prob)

    prob              go to state 16
    var_def           go to state 8
    class_definition  go to state 9


State 9

    4 prob: class_definition •

    $default  reduce using rule 4 (prob)


State 10

    7 var_def: WORD EQUALS • quoted_string SEMICOLON NEW
    8        | WORD EQUALS • expression SEMICOLON NEW
    9        | WORD EQUALS • mixed_expression SEMICOLON NEW

    INT    shift, and go to state 17
    FLOAT  shift, and go to state 18
    LPAR   shift, and go to state 19
    QUOTE  shift, and go to state 20

    $default  reduce using rule 39 (quoted_string)

    mixed_expression  go to state 21
    expression        go to state 22
    quoted_string     go to state 23


State 11

   10 var_def: LETTER EQUALS • quoted_string SEMICOLON NEW
   11        | LETTER EQUALS • expression SEMICOLON NEW
   12        | LETTER EQUALS • mixed_expression SEMICOLON NEW

    INT    shift, and go to state 17
    FLOAT  shift, and go to state 18
    LPAR   shift, and go to state 19
    QUOTE  shift, and go to state 20

    $default  reduce using rule 39 (quoted_string)

    mixed_expression  go to state 24
    expression        go to state 25
    quoted_string     go to state 26


State 12

   14 class_definition: PUBLIC CLASS • WORD LBRACE

    WORD  shift, and go to state 27


State 13

   15 class_definition: PRIVATE CLASS • WORD LBRACE

    WORD  shift, and go to state 28


State 14

   16 class_definition: CLASS WORD • LBRACE

    LBRACE  shift, and go to state 29


State 15

    0 $accept: prob $end •

    $default  accept


State 16

    3 prob: var_def prob •

    $default  reduce using rule 3 (prob)


State 17

   33 expression: INT •
   38           | INT •

    ADD        reduce using rule 33 (expression)
    ADD        [reduce using rule 38 (expression)]
    SUBT       reduce using rule 33 (expression)
    SUBT       [reduce using rule 38 (expression)]
    MULT       reduce using rule 33 (expression)
    MULT       [reduce using rule 38 (expression)]
    DIV        reduce using rule 33 (expression)
    DIV        [reduce using rule 38 (expression)]
    RPAR       reduce using rule 33 (expression)
    RPAR       [reduce using rule 38 (expression)]
    SEMICOLON  reduce using rule 33 (expression)
    SEMICOLON  [reduce using rule 38 (expression)]
    $default   reduce using rule 33 (expression)


State 18

   17 mixed_expression: FLOAT •
   32                 | FLOAT •

    ADD        reduce using rule 17 (mixed_expression)
    ADD        [reduce using rule 32 (mixed_expression)]
    SUBT       reduce using rule 17 (mixed_expression)
    SUBT       [reduce using rule 32 (mixed_expression)]
    MULT       reduce using rule 17 (mixed_expression)
    MULT       [reduce using rule 32 (mixed_expression)]
    DIV        reduce using rule 17 (mixed_expression)
    DIV        [reduce using rule 32 (mixed_expression)]
    RPAR       reduce using rule 17 (mixed_expression)
    RPAR       [reduce using rule 32 (mixed_expression)]
    SEMICOLON  reduce using rule 17 (mixed_expression)
    SEMICOLON  [reduce using rule 32 (mixed_expression)]
    $default   reduce using rule 17 (mixed_expression)


State 19

   22 mixed_expression: LPAR • mixed_expression RPAR
   37 expression: LPAR • expression RPAR

    INT    shift, and go to state 17
    FLOAT  shift, and go to state 18
    LPAR   shift, and go to state 19

    mixed_expression  go to state 30
    expression        go to state 31


State 20

   40 quoted_string: QUOTE • WORD QUOTE

    WORD  shift, and go to state 32


State 21

    9 var_def: WORD EQUALS mixed_expression • SEMICOLON NEW
   18 mixed_expression: mixed_expression • ADD mixed_expression
   19                 | mixed_expression • SUBT mixed_expression
   20                 | mixed_expression • MULT mixed_expression
   21                 | mixed_expression • DIV mixed_expression
   27                 | mixed_expression • ADD expression
   28                 | mixed_expression • SUBT expression
   29                 | mixed_expression • MULT expression
   30                 | mixed_expression • DIV expression

    ADD        shift, and go to state 33
    SUBT       shift, and go to state 34
    MULT       shift, and go to state 35
    DIV        shift, and go to state 36
    SEMICOLON  shift, and go to state 37


State 22

    8 var_def: WORD EQUALS expression • SEMICOLON NEW
   23 mixed_expression: expression • ADD mixed_expression
   24                 | expression • SUBT mixed_expression
   25                 | expression • MULT mixed_expression
   26                 | expression • DIV mixed_expression
   31                 | expression • DIV expression
   34 expression: expression • ADD expression
   35           | expression • SUBT expression
   36           | expression • MULT expression

    ADD        shift, and go to state 38
    SUBT       shift, and go to state 39
    MULT       shift, and go to state 40
    DIV        shift, and go to state 41
    SEMICOLON  shift, and go to state 42


State 23

    7 var_def: WORD EQUALS quoted_string • SEMICOLON NEW

    SEMICOLON  shift, and go to state 43


State 24

   12 var_def: LETTER EQUALS mixed_expression • SEMICOLON NEW
   18 mixed_expression: mixed_expression • ADD mixed_expression
   19                 | mixed_expression • SUBT mixed_expression
   20                 | mixed_expression • MULT mixed_expression
   21                 | mixed_expression • DIV mixed_expression
   27                 | mixed_expression • ADD expression
   28                 | mixed_expression • SUBT expression
   29                 | mixed_expression • MULT expression
   30                 | mixed_expression • DIV expression

    ADD        shift, and go to state 33
    SUBT       shift, and go to state 34
    MULT       shift, and go to state 35
    DIV        shift, and go to state 36
    SEMICOLON  shift, and go to state 44


State 25

   11 var_def: LETTER EQUALS expression • SEMICOLON NEW
   23 mixed_expression: expression • ADD mixed_expression
   24                 | expression • SUBT mixed_expression
   25                 | expression • MULT mixed_expression
   26                 | expression • DIV mixed_expression
   31                 | expression • DIV expression
   34 expression: expression • ADD expression
   35           | expression • SUBT expression
   36           | expression • MULT expression

    ADD        shift, and go to state 38
    SUBT       shift, and go to state 39
    MULT       shift, and go to state 40
    DIV        shift, and go to state 41
    SEMICOLON  shift, and go to state 45


State 26

   10 var_def: LETTER EQUALS quoted_string • SEMICOLON NEW

    SEMICOLON  shift, and go to state 46


State 27

   14 class_definition: PUBLIC CLASS WORD • LBRACE

    LBRACE  shift, and go to state 47


State 28

   15 class_definition: PRIVATE CLASS WORD • LBRACE

    LBRACE  shift, and go to state 48


State 29

   16 class_definition: CLASS WORD LBRACE •

    $default  reduce using rule 16 (class_definition)


State 30

   18 mixed_expression: mixed_expression • ADD mixed_expression
   19                 | mixed_expression • SUBT mixed_expression
   20                 | mixed_expression • MULT mixed_expression
   21                 | mixed_expression • DIV mixed_expression
   22                 | LPAR mixed_expression • RPAR
   27                 | mixed_expression • ADD expression
   28                 | mixed_expression • SUBT expression
   29                 | mixed_expression • MULT expression
   30                 | mixed_expression • DIV expression

    ADD   shift, and go to state 33
    SUBT  shift, and go to state 34
    MULT  shift, and go to state 35
    DIV   shift, and go to state 36
    RPAR  shift, and go to state 49


State 31

   23 mixed_expression: expression • ADD mixed_expression
   24                 | expression • SUBT mixed_expression
   25                 | expression • MULT mixed_expression
   26                 | expression • DIV mixed_expression
   31                 | expression • DIV expression
   34 expression: expression • ADD expression
   35           | expression • SUBT expression
   36           | expression • MULT expression
   37           | LPAR expression • RPAR

    ADD   shift, and go to state 38
    SUBT  shift, and go to state 39
    MULT  shift, and go to state 40
    DIV   shift, and go to state 41
    RPAR  shift, and go to state 50


State 32

   40 quoted_string: QUOTE WORD • QUOTE

    QUOTE  shift, and go to state 51


State 33

   18 mixed_expression: mixed_expression ADD • mixed_expression
   27                 | mixed_expression ADD • expression

    INT    shift, and go to state 17
    FLOAT  shift, and go to state 18
    LPAR   shift, and go to state 19

    mixed_expression  go to state 52
    expression        go to state 53


State 34

   19 mixed_expression: mixed_expression SUBT • mixed_expression
   28                 | mixed_expression SUBT • expression

    INT    shift, and go to state 17
    FLOAT  shift, and go to state 18
    LPAR   shift, and go to state 19

    mixed_expression  go to state 54
    expression        go to state 55


State 35

   20 mixed_expression: mixed_expression MULT • mixed_expression
   29                 | mixed_expression MULT • expression

    INT    shift, and go to state 17
    FLOAT  shift, and go to state 18
    LPAR   shift, and go to state 19

    mixed_expression  go to state 56
    expression        go to state 57


State 36

   21 mixed_expression: mixed_expression DIV • mixed_expression
   30                 | mixed_expression DIV • expression

    INT    shift, and go to state 17
    FLOAT  shift, and go to state 18
    LPAR   shift, and go to state 19

    mixed_expression  go to state 58
    expression        go to state 59


State 37

    9 var_def: WORD EQUALS mixed_expression SEMICOLON • NEW

    NEW  shift, and go to state 60


State 38

   23 mixed_expression: expression ADD • mixed_expression
   34 expression: expression ADD • expression

    INT    shift, and go to state 17
    FLOAT  shift, and go to state 18
    LPAR   shift, and go to state 19

    mixed_expression  go to state 61
    expression        go to state 62


State 39

   24 mixed_expression: expression SUBT • mixed_expression
   35 expression: expression SUBT • expression

    INT    shift, and go to state 17
    FLOAT  shift, and go to state 18
    LPAR   shift, and go to state 19

    mixed_expression  go to state 63
    expression        go to state 64


State 40

   25 mixed_expression: expression MULT • mixed_expression
   36 expression: expression MULT • expression

    INT    shift, and go to state 17
    FLOAT  shift, and go to state 18
    LPAR   shift, and go to state 19

    mixed_expression  go to state 65
    expression        go to state 66


State 41

   26 mixed_expression: expression DIV • mixed_expression
   31                 | expression DIV • expression

    INT    shift, and go to state 17
    FLOAT  shift, and go to state 18
    LPAR   shift, and go to state 19

    mixed_expression  go to state 67
    expression        go to state 68


State 42

    8 var_def: WORD EQUALS expression SEMICOLON • NEW

    NEW  shift, and go to state 69


State 43

    7 var_def: WORD EQUALS quoted_string SEMICOLON • NEW

    NEW  shift, and go to state 70


State 44

   12 var_def: LETTER EQUALS mixed_expression SEMICOLON • NEW

    NEW  shift, and go to state 71


State 45

   11 var_def: LETTER EQUALS expression SEMICOLON • NEW

    NEW  shift, and go to state 72


State 46

   10 var_def: LETTER EQUALS quoted_string SEMICOLON • NEW

    NEW  shift, and go to state 73


State 47

   14 class_definition: PUBLIC CLASS WORD LBRACE •

    $default  reduce using rule 14 (class_definition)


State 48

   15 class_definition: PRIVATE CLASS WORD LBRACE •

    $default  reduce using rule 15 (class_definition)


State 49

   22 mixed_expression: LPAR mixed_expression RPAR •

    $default  reduce using rule 22 (mixed_expression)


State 50

   37 expression: LPAR expression RPAR •

    $default  reduce using rule 37 (expression)


State 51

   40 quoted_string: QUOTE WORD QUOTE •

    $default  reduce using rule 40 (quoted_string)


State 52

   18 mixed_expression: mixed_expression • ADD mixed_expression
   18                 | mixed_expression ADD mixed_expression •
   19                 | mixed_expression • SUBT mixed_expression
   20                 | mixed_expression • MULT mixed_expression
   21                 | mixed_expression • DIV mixed_expression
   27                 | mixed_expression • ADD expression
   28                 | mixed_expression • SUBT expression
   29                 | mixed_expression • MULT expression
   30                 | mixed_expression • DIV expression

    ADD   shift, and go to state 33
    SUBT  shift, and go to state 34
    MULT  shift, and go to state 35
    DIV   shift, and go to state 36

    ADD       [reduce using rule 18 (mixed_expression)]
    SUBT      [reduce using rule 18 (mixed_expression)]
    MULT      [reduce using rule 18 (mixed_expression)]
    DIV       [reduce using rule 18 (mixed_expression)]
    $default  reduce using rule 18 (mixed_expression)


State 53

   23 mixed_expression: expression • ADD mixed_expression
   24                 | expression • SUBT mixed_expression
   25                 | expression • MULT mixed_expression
   26                 | expression • DIV mixed_expression
   27                 | mixed_expression ADD expression •
   31                 | expression • DIV expression
   34 expression: expression • ADD expression
   35           | expression • SUBT expression
   36           | expression • MULT expression

    ADD   shift, and go to state 38
    SUBT  shift, and go to state 39
    MULT  shift, and go to state 40
    DIV   shift, and go to state 41

    ADD       [reduce using rule 27 (mixed_expression)]
    SUBT      [reduce using rule 27 (mixed_expression)]
    MULT      [reduce using rule 27 (mixed_expression)]
    DIV       [reduce using rule 27 (mixed_expression)]
    $default  reduce using rule 27 (mixed_expression)


State 54

   18 mixed_expression: mixed_expression • ADD mixed_expression
   19                 | mixed_expression • SUBT mixed_expression
   19                 | mixed_expression SUBT mixed_expression •
   20                 | mixed_expression • MULT mixed_expression
   21                 | mixed_expression • DIV mixed_expression
   27                 | mixed_expression • ADD expression
   28                 | mixed_expression • SUBT expression
   29                 | mixed_expression • MULT expression
   30                 | mixed_expression • DIV expression

    ADD   shift, and go to state 33
    SUBT  shift, and go to state 34
    MULT  shift, and go to state 35
    DIV   shift, and go to state 36

    ADD       [reduce using rule 19 (mixed_expression)]
    SUBT      [reduce using rule 19 (mixed_expression)]
    MULT      [reduce using rule 19 (mixed_expression)]
    DIV       [reduce using rule 19 (mixed_expression)]
    $default  reduce using rule 19 (mixed_expression)


State 55

   23 mixed_expression: expression • ADD mixed_expression
   24                 | expression • SUBT mixed_expression
   25                 | expression • MULT mixed_expression
   26                 | expression • DIV mixed_expression
   28                 | mixed_expression SUBT expression •
   31                 | expression • DIV expression
   34 expression: expression • ADD expression
   35           | expression • SUBT expression
   36           | expression • MULT expression

    ADD   shift, and go to state 38
    SUBT  shift, and go to state 39
    MULT  shift, and go to state 40
    DIV   shift, and go to state 41

    ADD       [reduce using rule 28 (mixed_expression)]
    SUBT      [reduce using rule 28 (mixed_expression)]
    MULT      [reduce using rule 28 (mixed_expression)]
    DIV       [reduce using rule 28 (mixed_expression)]
    $default  reduce using rule 28 (mixed_expression)


State 56

   18 mixed_expression: mixed_expression • ADD mixed_expression
   19                 | mixed_expression • SUBT mixed_expression
   20                 | mixed_expression • MULT mixed_expression
   20                 | mixed_expression MULT mixed_expression •
   21                 | mixed_expression • DIV mixed_expression
   27                 | mixed_expression • ADD expression
   28                 | mixed_expression • SUBT expression
   29                 | mixed_expression • MULT expression
   30                 | mixed_expression • DIV expression

    ADD   shift, and go to state 33
    SUBT  shift, and go to state 34
    MULT  shift, and go to state 35
    DIV   shift, and go to state 36

    ADD       [reduce using rule 20 (mixed_expression)]
    SUBT      [reduce using rule 20 (mixed_expression)]
    MULT      [reduce using rule 20 (mixed_expression)]
    DIV       [reduce using rule 20 (mixed_expression)]
    $default  reduce using rule 20 (mixed_expression)


State 57

   23 mixed_expression: expression • ADD mixed_expression
   24                 | expression • SUBT mixed_expression
   25                 | expression • MULT mixed_expression
   26                 | expression • DIV mixed_expression
   29                 | mixed_expression MULT expression •
   31                 | expression • DIV expression
   34 expression: expression • ADD expression
   35           | expression • SUBT expression
   36           | expression • MULT expression

    ADD   shift, and go to state 38
    SUBT  shift, and go to state 39
    MULT  shift, and go to state 40
    DIV   shift, and go to state 41

    ADD       [reduce using rule 29 (mixed_expression)]
    SUBT      [reduce using rule 29 (mixed_expression)]
    MULT      [reduce using rule 29 (mixed_expression)]
    DIV       [reduce using rule 29 (mixed_expression)]
    $default  reduce using rule 29 (mixed_expression)


State 58

   18 mixed_expression: mixed_expression • ADD mixed_expression
   19                 | mixed_expression • SUBT mixed_expression
   20                 | mixed_expression • MULT mixed_expression
   21                 | mixed_expression • DIV mixed_expression
   21                 | mixed_expression DIV mixed_expression •
   27                 | mixed_expression • ADD expression
   28                 | mixed_expression • SUBT expression
   29                 | mixed_expression • MULT expression
   30                 | mixed_expression • DIV expression

    ADD   shift, and go to state 33
    SUBT  shift, and go to state 34
    MULT  shift, and go to state 35
    DIV   shift, and go to state 36

    ADD       [reduce using rule 21 (mixed_expression)]
    SUBT      [reduce using rule 21 (mixed_expression)]
    MULT      [reduce using rule 21 (mixed_expression)]
    DIV       [reduce using rule 21 (mixed_expression)]
    $default  reduce using rule 21 (mixed_expression)


State 59

   23 mixed_expression: expression • ADD mixed_expression
   24                 | expression • SUBT mixed_expression
   25                 | expression • MULT mixed_expression
   26                 | expression • DIV mixed_expression
   30                 | mixed_expression DIV expression •
   31                 | expression • DIV expression
   34 expression: expression • ADD expression
   35           | expression • SUBT expression
   36           | expression • MULT expression

    ADD   shift, and go to state 38
    SUBT  shift, and go to state 39
    MULT  shift, and go to state 40
    DIV   shift, and go to state 41

    ADD       [reduce using rule 30 (mixed_expression)]
    SUBT      [reduce using rule 30 (mixed_expression)]
    MULT      [reduce using rule 30 (mixed_expression)]
    DIV       [reduce using rule 30 (mixed_expression)]
    $default  reduce using rule 30 (mixed_expression)


State 60

    9 var_def: WORD EQUALS mixed_expression SEMICOLON NEW •

    $default  reduce using rule 9 (var_def)


State 61

   18 mixed_expression: mixed_expression • ADD mixed_expression
   19                 | mixed_expression • SUBT mixed_expression
   20                 | mixed_expression • MULT mixed_expression
   21                 | mixed_expression • DIV mixed_expression
   23                 | expression ADD mixed_expression •
   27                 | mixed_expression • ADD expression
   28                 | mixed_expression • SUBT expression
   29                 | mixed_expression • MULT expression
   30                 | mixed_expression • DIV expression

    ADD   shift, and go to state 33
    SUBT  shift, and go to state 34
    MULT  shift, and go to state 35
    DIV   shift, and go to state 36

    ADD       [reduce using rule 23 (mixed_expression)]
    SUBT      [reduce using rule 23 (mixed_expression)]
    MULT      [reduce using rule 23 (mixed_expression)]
    DIV       [reduce using rule 23 (mixed_expression)]
    $default  reduce using rule 23 (mixed_expression)


State 62

   23 mixed_expression: expression • ADD mixed_expression
   24                 | expression • SUBT mixed_expression
   25                 | expression • MULT mixed_expression
   26                 | expression • DIV mixed_expression
   31                 | expression • DIV expression
   34 expression: expression • ADD expression
   34           | expression ADD expression •
   35           | expression • SUBT expression
   36           | expression • MULT expression

    ADD   shift, and go to state 38
    SUBT  shift, and go to state 39
    MULT  shift, and go to state 40
    DIV   shift, and go to state 41

    ADD       [reduce using rule 34 (expression)]
    SUBT      [reduce using rule 34 (expression)]
    MULT      [reduce using rule 34 (expression)]
    DIV       [reduce using rule 34 (expression)]
    $default  reduce using rule 34 (expression)


State 63

   18 mixed_expression: mixed_expression • ADD mixed_expression
   19                 | mixed_expression • SUBT mixed_expression
   20                 | mixed_expression • MULT mixed_expression
   21                 | mixed_expression • DIV mixed_expression
   24                 | expression SUBT mixed_expression •
   27                 | mixed_expression • ADD expression
   28                 | mixed_expression • SUBT expression
   29                 | mixed_expression • MULT expression
   30                 | mixed_expression • DIV expression

    ADD   shift, and go to state 33
    SUBT  shift, and go to state 34
    MULT  shift, and go to state 35
    DIV   shift, and go to state 36

    ADD       [reduce using rule 24 (mixed_expression)]
    SUBT      [reduce using rule 24 (mixed_expression)]
    MULT      [reduce using rule 24 (mixed_expression)]
    DIV       [reduce using rule 24 (mixed_expression)]
    $default  reduce using rule 24 (mixed_expression)


State 64

   23 mixed_expression: expression • ADD mixed_expression
   24                 | expression • SUBT mixed_expression
   25                 | expression • MULT mixed_expression
   26                 | expression • DIV mixed_expression
   31                 | expression • DIV expression
   34 expression: expression • ADD expression
   35           | expression • SUBT expression
   35           | expression SUBT expression •
   36           | expression • MULT expression

    ADD   shift, and go to state 38
    SUBT  shift, and go to state 39
    MULT  shift, and go to state 40
    DIV   shift, and go to state 41

    ADD       [reduce using rule 35 (expression)]
    SUBT      [reduce using rule 35 (expression)]
    MULT      [reduce using rule 35 (expression)]
    DIV       [reduce using rule 35 (expression)]
    $default  reduce using rule 35 (expression)


State 65

   18 mixed_expression: mixed_expression • ADD mixed_expression
   19                 | mixed_expression • SUBT mixed_expression
   20                 | mixed_expression • MULT mixed_expression
   21                 | mixed_expression • DIV mixed_expression
   25                 | expression MULT mixed_expression •
   27                 | mixed_expression • ADD expression
   28                 | mixed_expression • SUBT expression
   29                 | mixed_expression • MULT expression
   30                 | mixed_expression • DIV expression

    ADD   shift, and go to state 33
    SUBT  shift, and go to state 34
    MULT  shift, and go to state 35
    DIV   shift, and go to state 36

    ADD       [reduce using rule 25 (mixed_expression)]
    SUBT      [reduce using rule 25 (mixed_expression)]
    MULT      [reduce using rule 25 (mixed_expression)]
    DIV       [reduce using rule 25 (mixed_expression)]
    $default  reduce using rule 25 (mixed_expression)


State 66

   23 mixed_expression: expression • ADD mixed_expression
   24                 | expression • SUBT mixed_expression
   25                 | expression • MULT mixed_expression
   26                 | expression • DIV mixed_expression
   31                 | expression • DIV expression
   34 expression: expression • ADD expression
   35           | expression • SUBT expression
   36           | expression • MULT expression
   36           | expression MULT expression •

    ADD   shift, and go to state 38
    SUBT  shift, and go to state 39
    MULT  shift, and go to state 40
    DIV   shift, and go to state 41

    ADD       [reduce using rule 36 (expression)]
    SUBT      [reduce using rule 36 (expression)]
    MULT      [reduce using rule 36 (expression)]
    DIV       [reduce using rule 36 (expression)]
    $default  reduce using rule 36 (expression)


State 67

   18 mixed_expression: mixed_expression • ADD mixed_expression
   19                 | mixed_expression • SUBT mixed_expression
   20                 | mixed_expression • MULT mixed_expression
   21                 | mixed_expression • DIV mixed_expression
   26                 | expression DIV mixed_expression •
   27                 | mixed_expression • ADD expression
   28                 | mixed_expression • SUBT expression
   29                 | mixed_expression • MULT expression
   30                 | mixed_expression • DIV expression

    ADD   shift, and go to state 33
    SUBT  shift, and go to state 34
    MULT  shift, and go to state 35
    DIV   shift, and go to state 36

    ADD       [reduce using rule 26 (mixed_expression)]
    SUBT      [reduce using rule 26 (mixed_expression)]
    MULT      [reduce using rule 26 (mixed_expression)]
    DIV       [reduce using rule 26 (mixed_expression)]
    $default  reduce using rule 26 (mixed_expression)


State 68
